Add more button href.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <div class="hi-text">
                                 <span>Daha iyi bir sen için</span>
                                 <h1>Hareket <strong>kapasiteni</strong> geliştir</h1>
-                                <a href="#" class="primary-btn">Bilgi al</a>
+                                <a href="#contact" class="primary-btn">Bilgi al</a>
                             </div>
                         </div>
                     </div>
@@ -265,7 +265,7 @@
                     <div class="bs-text">
                         <h2>daha fazla bilgi için bizimle iletişime geçin</h2>
                         <div class="bt-tips">Siz de bizimle birlikte hareket edin.</div>
-                        <a href="#" class="primary-btn  btn-normal">Bize Ulaşın</a>
+                        <a href="#contact" class="primary-btn  btn-normal">Bize Ulaşın</a>
                     </div>
                 </div>
             </div>
@@ -300,7 +300,7 @@
                             <li>Haftalık buluşmalar</li>
                             <li>&#8203;</li>
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Kayıt Ol</a>
+                        <a href="#contact" class="primary-btn pricing-btn">Kayıt Ol</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8">
@@ -318,7 +318,7 @@
                             <li>Haftalık buluşmalar</li>
                             <li>&#8203;</li>
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Kayıt Ol</a>
+                        <a href="#contact" class="primary-btn pricing-btn">Kayıt Ol</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8">
@@ -336,7 +336,7 @@
                             <li>Ücretsiz paket dondurma hakkı</li>
                             <li>Haftalık buluşmalar</li>
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Kayıt Ol</a>
+                        <a href="#contact" class="primary-btn pricing-btn">Kayıt Ol</a>
                     </div>
                 </div>
             </div>
@@ -354,7 +354,7 @@
                             <span>Ekibimiz</span>
                             <h2>ALANINDA UZMAN EĞİTMENLER</h2>
                         </div>
-                        <a href="#" class="primary-btn btn-normal appoinment-btn">Bize Ulaşın</a>
+                        <a href="#contact" class="primary-btn btn-normal appoinment-btn">Bize Ulaşın</a>
                     </div>
                 </div>
             </div>
