--- a/index.html
+++ b/index.html
@@ -39,14 +39,11 @@
         <div class="canvas-close">
             <i class="fa fa-close"></i>
         </div>
-        <div class="canvas-search search-switch">
-            <i class="fa fa-search"></i>
-        </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
-                <li><a href="./index.html">ANA SAYFA</a></li>
-                <li><a href="./about-us.html">BİZ KİMİZ</a></li>
-                <li><a href="./contact.html">İLETİŞİM</a></li>
+                <li><a href="#">ANA SAYFA</a></li>
+                <li><a href="#about-us">BİZ KİMİZ</a></li>
+                <li><a href="#contact">İLETİŞİM</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -81,9 +78,6 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="top-option">
-                        <div class="to-search search-switch">
-                            <i class="fa fa-search"></i>
-                        </div>
                         <div class="to-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -496,17 +490,6 @@
         </div>
     </section>
     <!-- Footer Section End -->
-
-    <!-- Search model Begin -->
-    <div class="search-model">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-switch">+</div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Search here.....">
-            </form>
-        </div>
-    </div>
-    <!-- Search model end -->
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
