--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav class="canvas-menu mobile-menu">
             <ul>
                 <li><a href="#">ANA SAYFA</a></li>
-                <li><a href="#about-us">BİZ KİMİZ</a></li>
+                <li><a href="#about-us">HAKKIMIZDA</a></li>
                 <li><a href="#contact">İLETİŞİM</a></li>
             </ul>
         </nav>
@@ -70,9 +70,9 @@
                 <div class="col-lg-6">
                     <nav class="nav-menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Ana Sayfa</a></li>
-                            <li><a href="#about-us">Hakkımızda</a></li>
-                            <li><a href="#contact">İletişim</a></li>
+                            <li class="active"><a href="./index.html">ANA SAYFA</a></li>
+                            <li><a href="#about-us">HAKKIMIZDA</a></li>
+                            <li><a href="#contact">İLETİŞİM</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -102,8 +102,8 @@
                     <div class="row">
                         <div class="col-lg-6 offset-lg-6">
                             <div class="hi-text">
-                                <span>Daha iyi bir sen için</span>
-                                <h1>Hareket <strong>kapasiteni</strong> geliştir</h1>
+                                <span>DAHA İYİ BİR SEN İÇİN</span>
+                                <h1>HAREKET <strong>KAPASİTENİ</strong> GELİŞTİR</h1>
                                 <a href="#contact" class="primary-btn">Bilgi al</a>
                             </div>
                         </div>
@@ -120,7 +120,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Neden bizi seçmelisiniz?</span>
+                        <span>NEDEN BİZİ SEÇMELİSİNİZ?</span>
                         <h2>DAHA İYİ BİR SEN İÇİN</h2>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Hizmetlerimiz</span>
+                        <span>HİZMETLERİMİZ</span>
                         <h2>NELER SUNUYORUZ?</h2>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                         </div>
                         <div class="ci-text">
                             <!-- <span>STRENGTH</span> -->
-                            <h5>Kuvvet Antrenmanları</h5>
+                            <h5>KUVVET ANTRENMANLARI</h5>
                             <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                         </div>
                         <div class="ci-text">
                             <!-- <span>Cardio</span> -->
-                            <h5>Mat Pilates Dersleri</h5>
+                            <h5>MAT PİLATES DERSLERİ</h5>
                             <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                         </div>
                         <div class="ci-text">
                             <!-- <span>STRENGTH</span> -->
-                            <h5>HIIT Antrenmanları</h5>
+                            <h5>HIIT ANTERNMANLARI</h5>
                             <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                         </div>
                         <div class="ci-text">
                             <!-- <span>STRENGTH</span> -->
-                            <h5>Postürel Egzersizler</h5>
+                            <h5>POSTÜREL EGZERSİZLER</h5>
                             <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
@@ -229,7 +229,7 @@
                         </div>
                         <div class="ci-text">
                             <!-- <span>Cardio</span> -->
-                            <h5>Koşu Etkinlikleri</h5>
+                            <h5>KOŞU ETKİNLİKLERİ</h5>
                             <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
@@ -241,7 +241,7 @@
                         </div>
                         <div class="ci-text">
                             <!-- <span>STRENGTH</span> -->
-                            <h5>Detoks Günleri</h5>
+                            <h5>DETOKS GÜNLERİ</h5>
                             <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
@@ -257,9 +257,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="bs-text">
-                        <h2>daha fazla bilgi için bizimle iletişime geçin</h2>
-                        <div class="bt-tips">Siz de bizimle birlikte hareket edin.</div>
-                        <a href="#contact" class="primary-btn  btn-normal">Bize Ulaşın</a>
+                        <h2>DAHA FAZLA BİLGİ İÇİN BİZİMLE İLETİŞİME GEÇİN</h2>
+                        <div class="bt-tips">SİZ DE BİZİMLE BİRLİKTE HAREKET EDİN.</div>
+                        <a href="#contact" class="primary-btn  btn-normal">BİZE ULAŞIN</a>
                     </div>
                 </div>
             </div>
@@ -273,8 +273,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Ödeme Planları</span>
-                        <h2>Size En Uygun Olanı Seçin</h2>
+                        <span>ÖDEME PLANLARI</span>
+                        <h2>SİZE EN UYGUN OLANI SEÇİN</h2>
                     </div>
                 </div>
             </div>
@@ -345,7 +345,7 @@
                 <div class="col-lg-12">
                     <div class="team-title">
                         <div class="section-title">
-                            <span>Ekibimiz</span>
+                            <span>EKİBİMİZ</span>
                             <h2>ALANINDA UZMAN EĞİTMENLER</h2>
                         </div>
                         <a href="#contact" class="primary-btn btn-normal appoinment-btn">Bize Ulaşın</a>
@@ -381,7 +381,7 @@
                 <div class="col-lg-6">
                     <div class="section-title contact-title">
                         <span>İLETİŞİM</span>
-                        <h2>Bize Ulaşın</h2>
+                        <h2>BİZE ULAŞIN</h2>
                     </div>
                     <div class="contact-widget">
                         <div class="cw-text">
