Make it more Turkish.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <div class="hi-text">
                                 <span>DAHA İYİ BİR SEN İÇİN</span>
                                 <h1>HAREKET <strong>KAPASİTENİ</strong> GELİŞTİR</h1>
-                                <a href="#contact" class="primary-btn">Bilgi al</a>
+                                <a href="#contact" class="primary-btn">BİLGİ AL</a>
                             </div>
                         </div>
                     </div>
