More more Turkish.

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                             <span>EKİBİMİZ</span>
                             <h2>ALANINDA UZMAN EĞİTMENLER</h2>
                         </div>
-                        <a href="#contact" class="primary-btn btn-normal appoinment-btn">Bize Ulaşın</a>
+                        <a href="#contact" class="primary-btn btn-normal appoinment-btn">BİZE ULAŞIN</a>
                     </div>
                 </div>
             </div>
@@ -357,7 +357,7 @@
                     <div class="ts-item set-bg" data-setbg="img/team/team-1.jpg">
                         <div class="ts_text">
                             <h4>Seray Güray</h4>
-                            <span>Pilates Eğitmeni</span>
+                            <span>PİLATES EĞİTMENİ</span>
                         </div>
                     </div>
                 </div>
@@ -365,7 +365,7 @@
                     <div class="ts-item set-bg" data-setbg="img/team/team-2.jpg">
                         <div class="ts_text">
                             <h4>Tolga Vidinligil</h4>
-                            <span>Fitness Eğitmeni</span>
+                            <span>FİTNESS EĞİTMENİ</span>
                         </div>
                     </div>
                 </div>
