Creates icon.html. Fixes tons of things in index.html

--- a/index.html
+++ b/index.html
@@ -43,15 +43,17 @@
             <ul>
                 <li><a href="#">ANA SAYFA</a></li>
                 <li><a href="#about-us">HAKKIMIZDA</a></li>
+                <li><a href="#our-services">HİZMETLERİMİZ</a></li>
                 <li><a href="#contact">İLETİŞİM</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
         <div class="canvas-social">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-youtube-play"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
+            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+            <!-- <a href="#"><i class="fa fa-youtube-play"></i></a> -->
+            <a href="https://www.instagram.com/moveuponline/" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="https://wa.me/+905459577531" target="_blank"><i class="fa fa-whatsapp"></i></a>&emsp;
         </div>
     </div>
     <!-- Offcanvas Menu Section End -->
@@ -72,6 +74,7 @@
                         <ul>
                             <li class="active"><a href="./index.html">ANA SAYFA</a></li>
                             <li><a href="#about-us">HAKKIMIZDA</a></li>
+                            <li><a href="#our-services">HİZMETLERİMİZ</a></li>
                             <li><a href="#contact">İLETİŞİM</a></li>
                         </ul>
                     </nav>
@@ -79,10 +82,11 @@
                 <div class="col-lg-3">
                     <div class="top-option">
                         <div class="to-social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
+                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                            <!-- <a href="#"><i class="fa fa-youtube-play"></i></a> -->
+                            <a href="https://www.instagram.com/moveuponline/" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://wa.me/+905459577531" target="_blank"><i class="fa fa-whatsapp"></i></a>&emsp;
                         </div>
                     </div>
                 </div>
@@ -128,14 +132,14 @@
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
-                        <span class="flaticon-034-stationary-bike"></span>
+                        <span class="flaticon-016-fitness"></span>
                         <h4>Hedeflerinize ulaşalım</h4>
                         <p>İhtiyaçlarınıza göre hazırlanmış antrenmanlarımız<br>ile hedeflerinize ulaşalım.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
-                        <span class="flaticon-033-juice"></span>
+                        <span class="flaticon-017-pull-up-bar"></span>
                         <h4>Postürünüzü düzeltin</h4>
                         <p>Doğru duruşu destekleyen egzersizlerle fiziksel görünümünü iyileştir<br>ve hareket
                             özgürlüğünü artır.</p>
@@ -161,7 +165,7 @@
     <!-- ChoseUs Section End -->
 
     <!-- Classes Section Begin -->
-    <section class="classes-section spad">
+    <section id="our-services" class="classes-section spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -290,7 +294,6 @@
                             <li>Online demo ders</li>
                             <li>Hedefe yönelik planlamalar</li>
                             <li>Aylık form takibi</li>
-                            <li>Ücretsiz paket dondurma hakkı</li>
                             <li>Haftalık buluşmalar</li>
                             <li>&#8203;</li>
                         </ul>
@@ -308,7 +311,6 @@
                             <li>Online demo ders</li>
                             <li>Hedefe yönelik planlamalar</li>
                             <li>Aylık form takibi</li>
-                            <li>Ücretsiz paket dondurma hakkı</li>
                             <li>Haftalık buluşmalar</li>
                             <li>&#8203;</li>
                         </ul>
@@ -323,12 +325,11 @@
                             <span>Aylık</span>
                         </div>
                         <ul>
-                            <li>Sosyal medya içerik desteği</li>
                             <li>Online demo ders</li>
                             <li>Hedefe yönelik planlamalar</li>
                             <li>Aylık form takibi</li>
-                            <li>Ücretsiz paket dondurma hakkı</li>
                             <li>Haftalık buluşmalar</li>
+                            <li>&#8203;</li>
                         </ul>
                         <a href="#contact" class="primary-btn pricing-btn">Kayıt Ol</a>
                     </div>
@@ -386,7 +387,7 @@
                     <div class="contact-widget">
                         <div class="cw-text">
                             <i class="fa fa-map-marker"></i>
-                            <p>Adres burada kom 34599<br /> Kadıköy/İstanbul</p>
+                            <p>Kozyatagi mah. Nevzat Bulut sk. Adalet Apt. <br/>No:14 D:23 K:7 Kadıköy/İstanbul</p>
                         </div>
                         <div class="cw-text">
                             <i class="fa fa-mobile"></i>
@@ -397,7 +398,7 @@
                         </div>
                         <div class="cw-text email">
                             <i class="fa fa-envelope"></i>
-                            <p>info@moveuponline.co</p>
+                            <p>tolga@moveuponline.co</p>
                         </div>
                     </div>
                 </div>
@@ -412,11 +413,6 @@
                     </div>
                 </div>
             </div>
-            <div class="map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6028.628351964424!2d29.086239077231895!3d40.970783021730966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac77b60725db3%3A0xabdee425902dbb19!2sSports%20Factory%20Pilates!5e0!3m2!1sen!2snl!4v1738871042436!5m2!1sen!2snl"
-                    height="550" style="border:0;" allowfullscreen=""></iframe>
-            </div>
         </div>
     </section>
     <!-- Contact Section End -->
@@ -428,7 +424,7 @@
                 <div class="col-md-4">
                     <div class="gt-text">
                         <i class="fa fa-map-marker"></i>
-                        <p>Adres burada kom 34599<br /> Kadıköy/İstanbul</p>
+                        <p>Kozyatagi mah. Nevzat Bulut sk. <br/>Adalet Apt. No:14 D:23 K:7 <br/>Kadıköy/İstanbul</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -443,7 +439,7 @@
                 <div class="col-md-4">
                     <div class="gt-text email">
                         <i class="fa fa-envelope"></i>
-                        <p>info@moveuponline.co</p>
+                        <p>tolga@moveuponline.co</p>
                     </div>
                 </div>
             </div>
@@ -465,11 +461,12 @@
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="fs-widget">
                         <div class="fa-social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>&emsp;
-                            <a href="#"><i class="fa fa-twitter"></i></a>&emsp;
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>&emsp;
-                            <a href="#"><i class="fa fa-instagram"></i></a>&emsp;
-                            <a href="#"><i class="fa  fa-envelope-o"></i></a>
+                            <!-- <a href="#"><i class="fa fa-facebook"></i></a>&emsp; -->
+                            <!-- <a href="#"><i class="fa fa-twitter"></i></a>&emsp; -->
+                            <!-- <a href="#"><i class="fa fa-youtube-play"></i></a>&emsp; -->
+                            <a href="https://www.instagram.com/moveuponline/" target="_blank"><i class="fa fa-instagram"></i></a>&emsp;
+                            <a href="https://wa.me/+905459577531" target="_blank"><i class="fa fa-whatsapp"></i></a>&emsp;
+                            <!-- <a href="#"><i class="fa  fa-envelope-o"></i></a> -->
                         </div>
                     </div>
                 </div>
