--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
             <!-- <a href="#"><i class="fa fa-youtube-play"></i></a> -->
             <a href="https://www.instagram.com/moveuponline/" target="_blank"><i class="fa fa-instagram"></i></a>
-            <a href="https://wa.me/+905459577531" target="_blank"><i class="fa fa-whatsapp"></i></a>&emsp;
+            <a href="https://wa.me/905459577531" target="_blank"><i class="fa fa-whatsapp"></i></a>&emsp;
         </div>
     </div>
     <!-- Offcanvas Menu Section End -->
@@ -86,7 +86,7 @@
                             <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
                             <!-- <a href="#"><i class="fa fa-youtube-play"></i></a> -->
                             <a href="https://www.instagram.com/moveuponline/" target="_blank"><i class="fa fa-instagram"></i></a>
-                            <a href="https://wa.me/+905459577531" target="_blank"><i class="fa fa-whatsapp"></i></a>&emsp;
+                            <a href="https://wa.me/905459577531" target="_blank"><i class="fa fa-whatsapp"></i></a>&emsp;
                         </div>
                     </div>
                 </div>
@@ -465,7 +465,7 @@
                             <!-- <a href="#"><i class="fa fa-twitter"></i></a>&emsp; -->
                             <!-- <a href="#"><i class="fa fa-youtube-play"></i></a>&emsp; -->
                             <a href="https://www.instagram.com/moveuponline/" target="_blank"><i class="fa fa-instagram"></i></a>&emsp;
-                            <a href="https://wa.me/+905459577531" target="_blank"><i class="fa fa-whatsapp"></i></a>&emsp;
+                            <a href="https://wa.me/905459577531" target="_blank"><i class="fa fa-whatsapp"></i></a>&emsp;
                             <!-- <a href="#"><i class="fa  fa-envelope-o"></i></a> -->
                         </div>
                     </div>
@@ -515,6 +515,13 @@
         });
     </script>
 
+<!-- WhatsApp Floating Button -->
+<a href="https://wa.me/905459577531" target="_blank" class="whatsapp-container">
+    <div class="whatsapp-button">
+        <i class="fa fa-whatsapp"></i>
+    </div>
+    <div class="whatsapp-text">Bize Ulaşın</div>
+</a>
 
 
 </body>
