Add links to tolga email.

--- a/index.html
+++ b/index.html
@@ -392,13 +392,13 @@
                         <div class="cw-text">
                             <i class="fa fa-mobile"></i>
                             <ul>
-                                <li>0 545 957 75 31</li>
-                                <li>0 532 557 41 99</li>
+                                <li><a href="https://wa.me/905459577531" target="_blank">0 545 957 75 31</a></li>
+                                <li><a href="https://wa.me/905325574199" target="_blank">0 532 557 41 99</a></li>
                             </ul>
                         </div>
                         <div class="cw-text email">
                             <i class="fa fa-envelope"></i>
-                            <p>tolga@moveuponline.co</p>
+                            <a href="mailto: tolga@moveuponline.co"><p>tolga@moveuponline.co</p></a>
                         </div>
                     </div>
                 </div>
@@ -431,15 +431,15 @@
                     <div class="gt-text">
                         <i class="fa fa-mobile"></i>
                         <ul>
-                            <li>0 545 957 75 31</li>
-                            <li>0 532 557 41 99</li>
+                            <li><a href="https://wa.me/905459577531" target="_blank">0 545 957 75 31</a></li>
+                            <li><a href="https://wa.me/905325574199" target="_blank">0 532 557 41 99</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="gt-text email">
                         <i class="fa fa-envelope"></i>
-                        <p>tolga@moveuponline.co</p>
+                        <a href="mailto: tolga@moveuponline.co"><p>tolga@moveuponline.co</p></a>
                     </div>
                 </div>
             </div>
